--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
             </div>
           </div>
 
-          <div class="swiper-slide">
+          <!-- <div class="swiper-slide">
             <div class="testimonial-item">
               <p>
                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
@@ -397,7 +397,7 @@
               <h3>Poorna Shashika</h3>
               <h4>Store owner</h4>
             </div>
-          </div>
+          </div> -->
 
           <div class="swiper-slide">
             <div class="testimonial-item">
@@ -412,7 +412,7 @@
             </div>
           </div>
 
-          <div class="swiper-slide">
+          <!-- <div class="swiper-slide">
             <div class="testimonial-item">
               <p>
                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
@@ -423,7 +423,7 @@
               <h3>Pasan Piyumika</h3>
               <h4>Founder - Gadget Labs</h4>
             </div>
-          </div>
+          </div> -->
 
         </div>
         <div class="swiper-pagination"></div>
