--- a/index.html
+++ b/index.html
@@ -796,7 +796,7 @@
           </div>
         </div>
 
-        <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
@@ -808,7 +808,7 @@
               </div>
             </div>
           </div>
-        </div> -->
+        </div>
 
       </div>
 
