--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Rasandun Perera</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta content="This is a portfolio + personal website of Rasandun Sayurumeth Perera" name="description">
+  <meta content="Rasandun, Rasandun Perera, Rasandun Sayurumeth Perera, UI/UX Designing, Graphic Designing, ThetaLoop" name="keywords">
+  <meta name="author" content="Rasandun Sayurumeth Perera">
+  <meta name="copyright" content="Rasandun Perera">
+  <meta name="title" content="Rasandun Perera">
 
   <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
