--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
       </nav>
 
       <div class="social-links">
-        <a href="https://twitter.com/RasandunP
+        <a href="https://twitter.rasandun.com
         " class="twitter"><i class="bi bi-twitter"></i></a>
-        <a href="https://www.facebook.com/rasandunsp" class="facebook"><i class="bi bi-facebook"></i></a>
-        <a href="https://www.instagram.com/astro_rasandun/
+        <a href="https://facebook.rasandun.com" class="facebook"><i class="bi bi-facebook"></i></a>
+        <a href="https://instagram.rasandun.com
         " class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href=" https://www.linkedin.com/in/rasandun/
+        <a href="https://linkedin.rasandun.com
         " class="linkedin"><i class="bi bi-linkedin"></i></a>
       </div>
 
