--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <link href="assets/css/style.css" rel="stylesheet">
 </head>
 
-<body>
+<body oncontextmenu="return false">
   <header id="header">
     <div class="container">
 
