--- a/index.html
+++ b/index.html
@@ -84,6 +84,10 @@
         " class="instagram"><i class="bi bi-instagram"></i></a>
         <a href="https://linkedin.rasandun.com
         " class="linkedin"><i class="bi bi-linkedin"></i></a>
+        <a href="https://github.com/rasandunsp
+        " class="linkedin"><i class="bi bi-github"></i></a>
+        <a href="https://gdg.community.dev/u/m2jy2e/#/about
+        " class="linkedin"><i class="bi bi-code"></i></a>
       </div>
 
     </div>
