--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <div class="container">
 
       <h1><a href="index.html">Rasandun Perera</a></h1>
-      <h2>I'm a passionate <span>Graphic designer / Software Engineering undergraduate</span> <p>From Sri Lanka</p> </h2>
+      <h2>I'm a passionate <span>UI/UX & Graphic designer / Software Engineering undergraduate</span> <p>From Sri Lanka</p> </h2>
 
       <nav id="navbar" class="navbar">
         <ul>
@@ -452,7 +452,7 @@
 
       <div class="row">
         <div class="col-lg-6">
-          <h3 class="resume-title">Sumary</h3>
+          <h3 class="resume-title">Summary</h3>
           <div class="resume-item pb-0">
             <h4>About Me</h4>
             <p><em>I'm a dedicated and organized student, following the path towards becoming a software engineer. Also, I'm a well-experienced graphic designer with multiple years of experience in freelancing at a professional level. I have many experiences in leadership roles as well while organizing local and international level projects. As an Astrophile and a technophile, I'm an updated and mostly self-taught student with the help of multiple educational backgrounds. In my free time, I do read books and learn new subjects and languages while volunteering towards making the world a better place.</em></p>
