--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <div class="container">
 
       <h1><a href="index.html">Rasandun Perera</a></h1>
-      <h2>I'm a passionate <span>UI/UX & Graphic designer / Software Engineering undergraduate</span> <p>From Sri Lanka</p> </h2>
+      <h2>I'm a passionate <span>Project Manager, UI/UX & Graphic designer / Software Engineering UG</span> <p>From Sri Lanka</p> </h2>
 
       <nav id="navbar" class="navbar">
         <ul>
