--- a/index.html
+++ b/index.html
@@ -518,6 +518,13 @@
               <li>Sinhala - Native</li>
             </p>
           </div>
+
+          <h3 class="resume-title">Download My Resume</h3>
+          <div class="resume-item">
+            <p>
+              <a href = "assets/Rasandun Perera CV 2024.pdf" download = "file"> Click Here</a>
+            </p>
+          </div>
         </div>
 
 
