--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
           <h3 class="resume-title">Download My Resume</h3>
           <div class="resume-item">
             <p>
-              <a href = "assets/Rasandun Perera CV 2024.pdf" download = "file"> Click Here</a>
+              <a href = "assets/Rasandun Perera CV 2024.pdf" download = "Rasandun Perera Resume"> Click Here</a>
             </p>
           </div>
         </div>
