--- a/index.html
+++ b/index.html
@@ -77,14 +77,14 @@
       </nav>
 
       <div class="social-links">
-        <a href="https://twitter.rasandun.com
+        <a href="https://twitter.com/RasandunP
         " class="twitter"><i class="bi bi-twitter"></i></a>
-        <a href="https://facebook.rasandun.com" class="facebook"><i class="bi bi-facebook"></i></a>
-        <a href="https://instagram.rasandun.com
+        <a href="https://facebook.com/rasandunsp" class="facebook"><i class="bi bi-facebook"></i></a>
+        <a href="https://www.instagram.com/astro_rasandun/
         " class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="https://linkedin.rasandun.com
+        <a href="https://www.linkedin.com/in/rasandun/
         " class="linkedin"><i class="bi bi-linkedin"></i></a>
-        <a href="https://github.com/rasandunsp
+        <a href="https://github.com/RasandunSP
         " class="linkedin"><i class="bi bi-github"></i></a>
         <a href="https://gdg.community.dev/u/m2jy2e/#/about
         " class="linkedin"><i class="bi bi-code"></i></a>
