--- a/index.html
+++ b/index.html
@@ -527,7 +527,6 @@
           </div>
         </div>
 
-
         <div class="col-lg-6">
           <h3 class="resume-title">Professional Experience</h3>
           <div class="resume-item">
@@ -842,6 +841,51 @@
             </div>
           </div>
         </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/portfolio-10.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Prototype Ui/UX Designs for a Personal Health and Edcuational Mobile Application - Conseils</h4>
+              <p>UI/UX</p>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/portfolio-10.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Prototype Ui/UX Designs for a Personal Health and Edcuational Mobile Application - Conseils"><i class="bx bx-plus"></i></a>
+                <!-- <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a> -->
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/portfolio-11.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Prototype Ui/UX Designs for a Reality TV Show</h4>
+              <p>UI/UX</p>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/portfolio-11.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Prototype Ui/UX Designs for a Reality TV Show -  This Design won the 2nd Place from Saegis Code Pulse UI/UX Hackathon in 2023"><i class="bx bx-plus"></i></a>
+                <!-- <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a> -->
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/portfolio-12.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Prototype Ui/UX Designs for the Entertainment Industry of Sri Lanka</h4>
+              <p>UI/UX</p>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/portfolio-12.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Prototype Ui/UX Designs for the Entertainment Industry of Sri Lanka -  This Design won the 3rd Place from Benchmark 2.0 - UI/UX Hackathon in 2023"><i class="bx bx-plus"></i></a>
+                <!-- <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a> -->
+              </div>
+            </div>
+          </div>
+        </div>
+
+        
 
       </div>
 
